# vrprouting

./: .editorconfig  .gitignore  .gitlab-ci.yml  404.html  CMakeLists.txt  CNAME  CONTRIBUTING.md  NEWS  NEWS.md  README.md  appveyor.yml  configuration.conf  index.html  latest  requirements.txt
.github/scripts/: update_locale.sh
.github/workflows/: boost_version.yml  check-files.yml  check-queries.yml  clang.yml  doc-check.yml  documentation.yml  locale-and-website.yml  locale.yml  macos.yml  publish-doc.yml  publish-users-doc.yml  release.yml  ubuntu.yml  update-users-doc.yml  website.yml  windows.yml
.tx/: config
ci/appveyor/: install-boost.bat  install.bat  msbuild_pgrouting.bat
ci/bessie/: regress.sh
ci/bessie32/: regress.sh
ci/debbie/: regress.sh
ci/winnie/: build_pgrouting.sh
cmake/pgr/: Version.cmake
dev/en/: .buildinfo  concepts.html  experimental.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  official.html  pgr-category.html  proposed.html  release_notes.html  sampledata.html  search.html  searchindex.js  support.html  vroom-category.html  vrp_full_version.html  vrp_oneDepot.html  vrp_pgr_pickDeliver.html  vrp_pgr_pickDeliverEuclidean.html  vrp_version.html  vrp_vroom.html  vrp_vroomJobs.html  vrp_vroomJobsPlain.html  vrp_vroomPlain.html  vrp_vroomShipments.html  vrp_vroomShipmentsPlain.html
dev/es/: .buildinfo  concepts.html  experimental.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  official.html  pgr-category.html  proposed.html  release_notes.html  sampledata.html  search.html  searchindex.js  support.html  vroom-category.html  vrp_full_version.html  vrp_oneDepot.html  vrp_pgr_pickDeliver.html  vrp_pgr_pickDeliverEuclidean.html  vrp_version.html  vrp_vroom.html  vrp_vroomJobs.html  vrp_vroomJobsPlain.html  vrp_vroomPlain.html  vrp_vroomShipments.html  vrp_vroomShipmentsPlain.html
doc/: CMakeLists.txt  conf.py.in
doc/general/: CMakeLists.txt  concepts.rst  experimental.rst  index.rst  installation.rst  introduction.rst  official.rst  or_tools-category.rst  pgr-category.rst  proposed.rst  release_notes.rst  sampledata.rst  support.rst  vroom-category.rst
doc/general-doc/: CMakeLists.txt  concepts.rst  experimental.rst  index.rst  installation.rst  official-functions.rst  proposed.rst  release_notes.rst  sampledata.rst  support.rst
doc/images/: CMakeLists.txt
doc/or_tools/: CMakeLists.txt  knapsack.rst  multiple_knapsack.rst  vrp_bin_packing.rst  vrp_knapsack.rst  vrp_multiple_knapsack.rst
doc/pgr_pickDeliver/: CMakeLists.txt  vrp_oneDepot.rst  vrp_pgr_pickDeliver.rst  vrp_pgr_pickDeliverEuclidean.rst
doc/pickDeliver/: CMakeLists.txt  VRP-category.rst  vrp_pickDeliver.rst  vrp_pickDeliverEuclidean.rst
doc/version/: CMakeLists.txt  vrp_full_version.rst  vrp_version.rst
doc/vroom/: CMakeLists.txt  vrp_vroom.rst  vrp_vroomJobs.rst  vrp_vroomJobsPlain.rst  vrp_vroomPlain.rst  vrp_vroomShipments.rst  vrp_vroomShipmentsPlain.rst
doc/vrp_basic/: CMakeLists.txt  vrp_vrpOneDepot.rst
docqueries/dataCheck/: create_initial_solution.result  create_initial_solution.test.sql  data_check.pg  data_check.result  test.conf
docqueries/general/: CMakeLists.txt  concepts.pg  concepts.result  test.conf
docqueries/or_tools/: CMakeLists.txt  bin_packing.result  doc-vrp_bin_packing.result  doc-vrp_bin_packing.test.sql  doc-vrp_knapsack.result  doc-vrp_knapsack.test.sql  doc-vrp_multiple_knapsack.result  doc-vrp_multiple_knapsack.test.sql  knapsack.pg  knapsack.result  test.conf
docqueries/pgr_pickDeliver/: CMakeLists.txt  doc-oneDepot.result  doc-pgr_pickDeliver.result  doc-pgr_pickDeliver.test.sql  doc-pgr_pickDeliverEuclidean.result  doc-pgr_pickDeliverEuclidean.test.sql  oneDepot.pg  oneDepotWrapper.test.sql  pgr_pickDeliver.result  pgr_pickDeliverEuclidean.pg  pgr_pickDeliverEuclidean.result  test.conf
docqueries/pickDeliver/: CMakeLists.txt  doc-oneDepot.result  doc-oneDepot.test.sql  doc-pgr_pickDeliver.result  doc-pgr_pickDeliver.test.sql  doc-pgr_pickDeliverEuclidean.result  doc-pgr_pickDeliverEuclidean.test.sql  doc-pickDeliver.result  doc-pickDeliver.test.sql  doc-pickDeliverEuclidean.result  doc-pickDeliverEuclidean.test.sql  oneDepotWrapper.result  test.conf
docqueries/simulation/: full_simulation.result  full_simulation.test.sql  small_simulation.result  small_simulation.test.sql  test.conf
docqueries/utilities/: _vehicles_at_time.pg  _vehicles_at_time.result  test.conf
docqueries/version/: doc-full_version.result  doc-full_version.test.sql  doc-version.result  doc-version.test.sql  full_version.result  test.conf
docqueries/vroom/: CMakeLists.txt  doc-vrp_vroom.result  doc-vrp_vroom.test.sql  doc-vrp_vroomJobs.result  doc-vrp_vroomJobs.test.sql  doc-vrp_vroomJobsPlain.result  doc-vrp_vroomJobsPlain.test.sql  doc-vrp_vroomPlain.result  doc-vrp_vroomPlain.test.sql  doc-vrp_vroomShipments.result  doc-vrp_vroomShipments.test.sql  doc-vrp_vroomShipmentsPlain.result  doc-vrp_vroomShipmentsPlain.test.sql  test.conf  vroomJobs.pg  vroomJobs.result  vroomShipments.result
docqueries/vrp_basic/: doc-pgr_vrpOneDepot.result  doc-pgr_vrpOneDepot.test.sql  oneDepotWrapper.result  oneDepotWrapper.test.sql
doxy/dev/: __version_8c.html  __version_8c__incl.map  __version_8c_source.html  annotated.html  annotated_dup.js  arrays__input_8c.html  arrays__input_8c__incl.map  arrays__input_8c_source.html  arrays__input_8h.html  arrays__input_8h.js  arrays__input_8h_source.html  base__matrix_8cpp.html  base__matrix_8cpp.js  base__matrix_8cpp_source.html  base__matrix_8h.html  base__matrix_8h__dep__incl.map  base__matrix_8h__incl.map  classes.html  (+710 more)
doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  mainpage.dox
locale/: README.md
sql/: CMakeLists.txt
src/common/: CMakeLists.txt  arrays_input.c  e_report.c  get_check_data.c  matrixRows_input.c  orders_input.c  pgr_alloc.cpp  postgres_connection.c  time_multipliers_input.c  vehicles_input.c
src/common/vroom/: breaks_input.c  jobs_input.c  matrix_input.c  shipments_input.c  time_windows_input.c  vehicles_input.c
(+1866 files in other folders)
